--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
     <script src="main.js"></script>
   </head>
 
