--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <title>my p5.js sketch</title>
 
-    <link rel="stylesheet" href="style.css" />
-
     <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
 
   <body></body>
